test(etcd): refine tests