@@ -15,14 +15,15 @@
  */
 package org.febit.common.etcd.locks;
 
-import io.etcd.jetcd.ByteSequence;
 import io.etcd.jetcd.Client;
 import org.junit.jupiter.api.Test;
 
-import java.nio.charset.StandardCharsets;
-import java.time.Duration;
 import java.util.List;
 
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.febit.common.etcd.support.TestSupport.DU_10M;
+import static org.febit.common.etcd.support.TestSupport.DU_15S;
+import static org.febit.common.etcd.support.TestSupport.bytes;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Answers.RETURNS_DEEP_STUBS;
 import static org.mockito.Mockito.mock;
@@ -31,8 +32,8 @@ class EtcdLockRegistryTest {
 
     @Test
     void builderRejectsNullClient() {
-        assertThrows(NullPointerException.class, () ->
-                EtcdLockRegistry.builder().build());
+        assertThatThrownBy(() -> EtcdLockRegistry.builder().build())
+                .isInstanceOf(NullPointerException.class);
     }
 
     @Test
@@ -45,7 +46,7 @@ class EtcdLockRegistryTest {
     }
 
     @Test
-    void heldByCurrentThreadReturnsEmptyBeforeAnyLock() {
+    void heldByCurrentThreadInitially() {
         try (var client = mock(Client.class, RETURNS_DEEP_STUBS);
              var registry = EtcdLockRegistry.create(client)) {
             var held = registry.heldByCurrentThread();
@@ -55,7 +56,7 @@ class EtcdLockRegistryTest {
     }
 
     @Test
-    void isHeldByCurrentThreadReturnsFalseBeforeAnyLock() {
+    void isHeldByCurrentThreadInitially() {
         try (var client = mock(Client.class, RETURNS_DEEP_STUBS);
              var registry = EtcdLockRegistry.create(client)) {
             assertFalse(registry.isHeldByCurrentThread(
@@ -64,10 +65,10 @@ class EtcdLockRegistryTest {
     }
 
     @Test
-    void lockForByteSequenceCreatesLock() {
+    void lockForBytes() {
         try (var client = mock(Client.class, RETURNS_DEEP_STUBS);
              var registry = EtcdLockRegistry.create(client)) {
-            var key = ByteSequence.from("some-key", StandardCharsets.UTF_8);
+            var key = bytes("some-key");
             var lock = registry.lockFor(key);
             assertNotNull(lock);
             assertEquals(List.of(key), ((EtcdLockImpl) lock).keys());
@@ -75,7 +76,7 @@ class EtcdLockRegistryTest {
     }
 
     @Test
-    void lockForVarargsCreatesMultiKeyLock() {
+    void lockForVarargs() {
         try (var client = mock(Client.class, RETURNS_DEEP_STUBS);
              var registry = EtcdLockRegistry.create(client)) {
             var lock = (EtcdLockImpl) registry.lockFor("var/a", "var/b");
@@ -94,7 +95,7 @@ class EtcdLockRegistryTest {
     }
 
     @Test
-    void lockForListOfStringsCreatesLock() {
+    void lockForList() {
         try (var client = mock(Client.class, RETURNS_DEEP_STUBS);
              var registry = EtcdLockRegistry.create(client)) {
             var lock = (EtcdLockImpl) registry.lockFor(List.of("list/a", "list/b"));
@@ -105,42 +106,40 @@ class EtcdLockRegistryTest {
     }
 
     @Test
-    void lockForBytesCreatesLock() {
+    void lockForBytesList() {
         try (var client = mock(Client.class, RETURNS_DEEP_STUBS);
-             var registry = EtcdLockRegistry.create(client)) {
+             var registry = EtcdLockRegistry.create(client)
+        ) {
             var keys = List.of(bytes("bytes/key"));
             var lock = (EtcdLockImpl) registry.lockForBytes(keys);
             assertEquals(1, lock.keys().size());
-            assertEquals("bytes/key", lock.keys().get(0).toString());
+            assertEquals("bytes/key", lock.keys().getFirst().toString());
         }
     }
 
     @Test
-    void builderSupportsWaitMax() {
-        try (var client = mock(Client.class, RETURNS_DEEP_STUBS)) {
-            var waitMax = Duration.ofMinutes(10);
-            var registry = EtcdLockRegistry.builder()
-                    .client(client)
-                    .waitMax(waitMax)
-                    .build();
-            assertEquals(waitMax, registry.options().waitMax());
+    void waitMaxOption() {
+        try (var client = mock(Client.class, RETURNS_DEEP_STUBS);
+             var registry = EtcdLockRegistry.builder()
+                     .client(client)
+                     .waitMax(DU_10M)
+                     .build()
+        ) {
+            assertEquals(DU_10M, registry.options().waitMax());
         }
     }
 
     @Test
-    void createWithOptionsAcceptsClientAndOptions() {
-        try (var client = mock(Client.class, RETURNS_DEEP_STUBS)) {
-            var options = EtcdLockOptions.builder()
-                    .strict(true)
-                    .ttl(Duration.ofSeconds(15))
-                    .build();
-            var registry = EtcdLockRegistry.create(client, options);
+    void createWithOptions() {
+        var options = EtcdLockOptions.builder()
+                .strict(true)
+                .ttl(DU_15S)
+                .build();
+        try (var client = mock(Client.class, RETURNS_DEEP_STUBS);
+             var registry = EtcdLockRegistry.create(client, options)
+        ) {
             assertTrue(registry.options().strict());
-            assertEquals(Duration.ofSeconds(15), registry.options().ttl());
+            assertEquals(DU_15S, registry.options().ttl());
         }
-    }
-
-    private static ByteSequence bytes(String value) {
-        return ByteSequence.from(value, StandardCharsets.UTF_8);
     }
 }
